*    Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
*
*/

Bjørn Rohde Jensen <brj@statsbiblioteket.dk>

????-??-?? Bjørn Rohde Jensen <brj@statsbiblioteket.dk>
        * Release 5.2.0
        * Removed hardcoded removal of attributes starting with urn:oid.
        * Added a logged in landing page in case the client does not provide a service url.

2014-02-07 Bjørn Rohde Jensen <brj@statsbiblioteket.dk>
        * Release 5.1.0
        * Fixed a bug where the 'url' parameter was required even when displaying a logged out page.
        * Fixed a bug where attribute transfer could not be disabled.
        * Added support for specifying which attributes to transfer.
        * Added support for specifying a named subset of IdPs allowing clients to restrict the list of IdPs in the
          wayf step.

2013-11-04 Bjørn Rohde Jensen <brj@statsbiblioteket.dk>
        * Release 5.0.0
        * Removed support for storing tickets in proprietary key-value store AttributeStore.
        * Added support for storing tickets in a SQL database.
        * Added support for storing tickets in memcached.
        * Added support for proxy tickets.
        * Added support for renewing login.
        * Added an optional logged out landing page with a return url.
        * Added support for specifying an idp during login thus skipping the wayf step.
        * Added support for specifying a language hint during login.

2013-01-29 Bjørn Rohde Jensen <brj@statsbiblioteket.dk>
        * Release 4.0.0
        * Moved all filters to a dedicated project.
        * Moved theme related code into the sbthemes project.
        * Added an abstract cas ticket store with concrete subclasses to store tickets locally or in the attribute store.
        * Changed cas 2.0 response generation from hand coded to using php dom document.
        * Fixed a bug in cas 1.0 response generation, where yes/no was returned in upper case.
