@@ -25,6 +25,7 @@ Bjørn Rohde Jensen <brj@statsbiblioteket.dk>
         * Release 5.2.0
         * Removed hardcoded removal of attributes starting with urn:oid.
         * Added a logged in landing page in case the client does not provide a service url.
+        * It is now possible to add an attribute indicating whether the attributes are base64 encoded or not.
 
 2014-02-07 Bjørn Rohde Jensen <brj@statsbiblioteket.dk>
         * Release 5.1.0
